<resources>
    <string name="app_name">GreenBRU!</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic291ZmlhbmViIiwiYSI6ImNsYmMwbDh6NzAyZzAzbm1pYmJ4dXppb28ifQ.doJXELohv3KMNR_I5zARRQ</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="check">Check</string>
    <string name="capture">Capture</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_inn">Log in</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="collection">Collection</string>
    <string name="inbox">Inbox</string>
    <string name="orders">Orders</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="support">Support</string>
    <string name="github_code"><![CDATA[Github Code </>]]></string>
    <string name="signal_garbage">Signal garbage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_fragment">Settings</string>
    <string name="map">Map</string>
    <string name="aboutus">"Our project is dedicated to making Brussels a better place to live. We believe that mutual aid, ecology, etc. are essential to make Brussels even more unique for future generations Since the launch of our project in 2022, we, the development team, have been working day an night to make from this app an added value for the life of the citizens Our team is made up of a group of dedicated and passionate individuals. We strive to create a collaborative and inclusive environment that allows us to produce an app of the highest quality. Thank you for choosing to learn more about our project. We hope that you will join us in contributing to our efforts.  "</string>
    <string name="aboutus_second">GreenBRU! developer team</string>
    <string name="senior_developer">Senior developer</string>
    <string name="log_out">Log Out</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="last_name">Last name</string>
    <string name="name">name</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="emaill">email</string>
    <string name="list_of_signals">List of signals</string>
    <string name="title_activity_mmmmmm">MMMMMM</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="call_center">Call center</string>
    <string name="chunky_home_files">Chunky Home Files</string>
    <string name="grof_huisvuil">Grof Huisvuil</string>
    <string name="definitie_grofvuil">Grof huisvuil kan door zijn aard, gewicht of afmetingen niet in zakken worden meegenomen en hangt niet vast aan uw woning (cf. bouw- en renovatieafval).</string>
    <string name="grof_huisvuill">GROF HUISVUIL</string>
    <string name="via_onze_ophaaldienst_aan_huis_van_grof_huisvuil_dit_kan_uitsluitend_na_afspraak_via_0800_981_81_inlichtingen_en_afspraken_zijn_alleen_mogelijk_via_telefoon_geen_afspraak_via_internet">Via onze ophaaldienst aan huis* van grof huisvuil. Dit kan uitsluitend na afspraak via 0800/981.81. Inlichtingen en afspraken zijn alleen mogelijk via telefoon (geen afspraak via internet).</string>

</resources>