<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="505dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:text="Please enter your Login and your Password" />

        <EditText
            android:id="@+id/username_login_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/loginuserlogo"
            android:layout_marginBottom="30dp"
            android:hint="@string/username"
            android:paddingLeft="20dp"
            android:textColorHint="@color/white"
            android:textSize="25dp" />
        <EditText
            android:id="@+id/password_login_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/password"
            android:drawableLeft="@drawable/loginlocklogo"
            android:paddingLeft="20dp"
            android:textColorHint="@color/white"
            android:textSize="25dp" />

        <Button
            android:id="@+id/login_main_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/mapbox_blue"
            android:text="@string/log_inn"
            android:textSize="20dp"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/register_login_main"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/mapbox_blue"
            android:text="@string/register"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3F51B5"
        android:orientation="horizontal">

                <ImageView
                    android:id="@+id/google_btn_login_main"
                    android:layout_width="360dp"
                    android:layout_height="58dp"
                    android:layout_margin="20dp"
                    android:background="#3F51B5"
                    android:src="@drawable/googlebtnlogo" />


            </LinearLayout>

</LinearLayout>