<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    style="@style/nightModeSwitch"
    tools:context=".AboutUsFragment"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutus_title"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="26dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutus"
        android:text="@string/aboutus"
        android:layout_marginLeft="5dp"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:layout_marginBottom="50dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutus_second"
        android:text="@string/aboutus_second"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:layout_marginBottom="30dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile_aboutus_left"
            android:src="@drawable/img_soufiane"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentLeft="true"
            app:riv_oval="true"
            />
        <TextView
            android:id="@+id/textview_devone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Soufiane Bayoud"
            android:layout_below="@id/imageProfile_aboutus_left"
            android:scaleType="centerCrop"
            android:layout_marginLeft="60dp"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senior_developer"
            android:textStyle="italic"
            android:layout_below="@id/textview_devone"
            android:scaleType="centerCrop"
            android:layout_marginLeft="70dp"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="50dp"/>
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile_aboutus_right"
            android:src="@drawable/najari_profile_pic"

            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginRight="75dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentRight="true"
            app:riv_oval="true"
            />
        <TextView
            android:id="@+id/textview_devtwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nawfel Ajari"
            android:layout_below="@id/imageProfile_aboutus_right"
            android:scaleType="centerCrop"
            android:layout_marginRight="75dp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senior_developer"
            android:textStyle="italic"
            android:layout_below="@id/textview_devtwo"
            android:scaleType="centerCrop"
            android:layout_marginRight="75dp"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="50dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile_aboutus_leftbelow"
            android:src="@drawable/moatezgnaoua_profile_pic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentLeft="true"
            app:riv_oval="true"
            />
        <TextView
            android:id="@+id/textview_devthree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Moâtez Gnaoua"
            android:layout_below="@id/imageProfile_aboutus_leftbelow"
            android:scaleType="centerCrop"
            android:layout_marginLeft="60dp"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senior_developer"
            android:textStyle="italic"
            android:layout_below="@id/textview_devthree"
            android:scaleType="centerCrop"
            android:layout_marginLeft="70dp"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="50dp"/>
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile_aboutus_rightbelow"
            android:src="@drawable/airhanyalaz_profile_pic"

            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginRight="75dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentRight="true"
            app:riv_oval="true"
            />
        <TextView
            android:id="@+id/textview_devfour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Erhan Yalaz"
            android:layout_below="@id/imageProfile_aboutus_rightbelow"
            android:scaleType="centerCrop"
            android:layout_marginRight="75dp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senior_developer"
            android:textStyle="italic"
            android:layout_below="@id/textview_devfour"
            android:scaleType="centerCrop"
            android:layout_marginRight="75dp"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="50dp"/>

    </RelativeLayout>


</LinearLayout>